--- a/Views/Character/Index.cshtml
+++ b/Views/Character/Index.cshtml
@@ -17,7 +17,7 @@
 
         </div>
         <div class="col">
-
+            <partial name="Card" model="Model.results[0]"/>
         </div>
     </div>
 </div>
